tests-integration/tests/custom/syntax-errors/unsupported-statement/stderr.expected
Error:
    model.eprime:2:1:
  |
2 | print x
  | ^
Missing ,

model.eprime:2:7:
  |
2 | print x
  |       ^
Missing ,

model.eprime:2:8:
  |
2 | print x
  |        ^
Missing Domain

model.eprime:2:8:
  |
2 | print x
  |        ^
Missing :


